Fixed z-index and sizing bugs

--- a/resources/css/components/navigation.css
+++ b/resources/css/components/navigation.css
@@ -321,7 +321,7 @@ nav.secondary-nav {
     background-color: var(--c-white);
     /* padding: 24px; */
     box-shadow: var(--shadow-elevation-medium);
-    z-index: 2;
+    z-index: 5;
     border-left: 1px solid var(--c-gray-100);
     overflow: scroll;
     padding-top: 30px;
