--- a/resources/css/util/util.css
+++ b/resources/css/util/util.css
@@ -230,7 +230,7 @@
 
 @media screen and (max-width: 450px) {
     .underline::after {
-        height: 20px;
+        height: 25px;
         /* width: 200px; */
     }
 }
